--- a/pinview/src/main/res/values/dimens.xml
+++ b/pinview/src/main/res/values/dimens.xml
@@ -21,4 +21,7 @@
     <dimen name="pv_pin_view_item_spacing">5dp</dimen>
     <dimen name="pv_pin_view_item_line_width">2dp</dimen>
     <dimen name="pv_pin_view_cursor_width">0dp</dimen>
+
+    <dimen name="item_line_stroke_width">3dp</dimen>
+    <dimen name="item_radius">7dp</dimen>
 </resources>
